Issue #9213: Add index and count methods to range objects, needed to meet the API of the collections.Sequence ABC.