Doc/library/stdtypes.rst
@@ -1554,9 +1554,23 @@ looping.  The advantage of the :class:`range` type is that an :class:`range`
 object will always take the same amount of memory, no matter the size of the
 range it represents.  There are no consistent performance advantages.
 
-Range objects have very little behavior: they only support indexing, iteration,
-and the :func:`len` function.
+Range objects have relatively little behavior: they support indexing,
+iteration, the :func:`len` function, and the following methods.
 
+.. method:: range.count(x)
+
+   Return the number of *i*'s for which ``s[i] == x``.  Normally the
+   result will be 0 or 1, but it could be greater if *x* defines an
+   unusual equality function.
+
+    .. versionadded:: 3.2
+
+.. method:: range.index(x)
+
+   Return the smallest *i* such that ``s[i] == x``.  Raises
+   :exc:`ValueError` when *x* is not in the range.
+
+    .. versionadded:: 3.2
 
 .. _typesseq-mutable:
 
